# mantid-profiler

./: .pre-commit-config.yaml  README.md  algorithm_tree.py  mantid-profiler.py  psrecord.py  pyproject.toml
